change fonts color and weight

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -25,6 +25,12 @@
     border-color:#673ab7!important;
 }
 
+.price-discounted{
+    
+    font-weight: bold;
+    color:red;
+}
+
 .discount-label{
     font-size: 12px!important;
     color: black;
