--- a/src/main/webapp/css/mon-style.css
+++ b/src/main/webapp/css/mon-style.css
@@ -1,8 +1,8 @@
 .custom-bg{
-    background-color: chocolate !important;
+    background-color:#007bff !important;
 }
 #mon-bg {
-    background-color: chocolate !important; 
+    background-color:#007bff !important; 
 }
 .mon-fond {
     
